# Asyncio-course-fetcher

./: .env  .gitignore  Asyncio-course-fetcher.py  Notifiers.py  README.md  Sqltools.py  Syncio-course-fetcher.py  asyncio-course-fetcher.py  config.yaml  notifiers.py  pyproject.toml  schedule.xlsx  sqltools.py
